2702 [x265]                 added the cutree file to the intermediate file set. Bug #869
2701 [FileIndexer]          fixed unable to select specific audio tracks to be demuxed from a DVD source with DG Indexer (regression of 2668)
2700 [FileIndexer]          fixed unnecessary use of pgcdemux for sources with only one PGC and no angles (regression of 2668)
2699 [VobSubber]            added option to extract forced subtitles in dedicated file(s)
     [OneClick]             fixed wrong assignment of automatically detected forced IDX/SUB subtitles (regression of 2686)
2696                        runtime files will always be copied
2695                        improved runtime file handling
2694 [VobSubber]            fixed error if output path contains blanks
     [VobSubber]            removed 1GB warning
     [VobSubber]            added CC files to the to be deleted intermediate files
2693 [AudioEncoder]         default to LWLibavAudioSource()/LSMASHAudioSource()
     [AudioEncoder]         added downmix option to 5.1
     [AudioEncoder]         added proper LoadPlugin calls for TimeStrech()/TimeStretchPlugin() and SoxFilter()
     [AudioEncoder]         x64: remove filter/functions where the not available plugins AudioLimiter.dll or SoxFilter.dll are required
2692 [qaac]                 removed --no-delay option if LC is not used (regression of 2377). Bug #865
2691 [x265]                 fixed wrong command line (regression of 2685). Bug #863
                            changed default --crf vaue to 28
2690                        improved x64 build
     [AviSynth]             replaced Yadif by Yadifmod2
2689 [VobSubber]            improved error handling if forced subtitles are not found (regression of 2686)
                            added a warning if VOB file sizes above the specification limit are used
2688 [x264]                 fixed incorrect command line when using a x86 OS (regression of 2681)